# dbdiff

./: .gitignore  README.md  buildspec.yml  common.py  compare.py  config.ini.example  notes.txt  pg_utils.py  proto.py  pyproject.toml  requirements.txt  test.py
exclusions/functions/: postgis_1.5_pg9.0.csv  postgis_3.5_pg16.8.csv
exclusions/tables/: tables_to_exclude.csv
pg15/: docker-compose.yml  restore.sh
pg9/: docker-compose.yml  restore.sh
sql/: functions.sql  tables.sql  tables_with_rows.sql
tests/: test_common.py  test_compare.py  test_pg_utils.py
