[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbdiff"
dynamic = ["version"]
description = 'Database diffing tool'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Jonathan Lake-Thomas" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pg8000",
    "click"
]

[project.scripts]
dbdiff = "compare:main"
[tool.hatch.version]
path = "__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["."]